Enhance SEO and update dependencies
- Updated index.html to include primary meta tags, Open Graph, and Twitter card metadata for improved SEO.
- Added react-helmet-async and its types to package.json for better management of document head.
- Implemented Intersection Observer in App.tsx to track active sections for dynamic SEO updates.
- Wrapped App component in HelmetProvider for SEO management in main.tsx.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chef Valerio Carlos - Brazilian Culinary Artistry</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+    <!-- Primary Meta Tags -->
+    <meta
+      name="title"
+      content="Chef Valerio Carlos - Brazilian Culinary Artistry"
+    />
+    <meta
+      name="description"
+      content="Explore the authentic flavors of Brazilian cuisine crafted by Chef Valerio Carlos. Catering, private dining, and culinary experiences available."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://chefvalerio.com/" />
+    <meta
+      property="og:title"
+      content="Chef Valerio Carlos - Brazilian Culinary Artistry"
+    />
+    <meta
+      property="og:description"
+      content="Explore the authentic flavors of Brazilian cuisine crafted by Chef Valerio Carlos. Catering, private dining, and culinary experiences available."
+    />
+    <meta property="og:image" content="/chef-valerio-preview.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://chefvalerio.com/" />
+    <meta
+      property="twitter:title"
+      content="Chef Valerio Carlos - Brazilian Culinary Artistry"
+    />
+    <meta
+      property="twitter:description"
+      content="Explore the authentic flavors of Brazilian cuisine crafted by Chef Valerio Carlos. Catering, private dining, and culinary experiences available."
+    />
+    <meta property="twitter:image" content="/chef-valerio-preview.jpg" />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
